updates MadLibs.csproj which was not referencing the web SDK, causing errors.
Co-authored-by: Ian Gregg <iangregg188@gmail.com>

--- a/Madlibs/Views/Home/Form.cshtml
+++ b/Madlibs/Views/Home/Form.cshtml
@@ -6,12 +6,12 @@
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
   </head>
   <body>
-    <h1>Fill in your name and your friend's name to create your custom postcard!</h1>
+    <h1>Fill in the form to create a Madlib about a day in the park!</h1>
     <form action="/MadlibPark" method="post">
-      <label for="Adjective1">Adjective</label>
-      <input id="Adjective1" name="Adjective1" type="text">
+      <label for="adjective1">Adjective</label>
+      <input id="adjective1" name="Adjective1" type="text"><br>
       <label for="Noun1">Noun</label>
-      <input id="Noun1" name="Noun1" type="text">
+      <input id="Noun1" name="Noun1" type="text"> <br>
       <label for="Verb1">Verb</label>
       <input id="Verb1" name="Verb1" type="text">
       <label for="Noun2">Noun</label>
