adds form for Einstein Madlib story, as well as the madlib content
Co-authored-by: Ian Gregg <iangregg188@gmail.com>

--- a/Madlibs/Views/Home/Form2.cshtml
+++ b/Madlibs/Views/Home/Form2.cshtml
@@ -2,19 +2,19 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>A Trip to the park Madlib</title>
+    <title>Madlib about Albert Einstein</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
   </head>
   <body>
-    <h1>Fill in the form to create a Madlib about a day in the park!</h1>
-    <form action="/MadlibPark" method="post">
-      <label for="adjective1">Adjective</label>
-      <input id="Adjective1" name="Adjective1" type="text"><br><br>
+    <h1>Fill in the form to create a Madlib about Albert Einstein!</h1>
+    <form action="/MadlibAlbert" method="post">
+      <label for="FemaleCelebrity">Female Celebrity</label>
+      <input id="FemaleCelebrity" name="FemaleCelebrity" type="text"><br><br>
+      <label for="MaleCelebrity">Male Celebrity</label>
+      <input id="MaleCelebrity" name="MaleCelebrity" type="text"><br><br>
       <label for="Noun1">Noun</label>
       <input id="Noun1" name="Noun1" type="text"><br><br>
-      <label for="Verb1">Verb</label>
-      <input id="Verb1" name="Verb1" type="text"><br><br>
-      <label for="Noun2">Noun</label>
+      <label for="PluralNoun1">Noun</label>
       <input id="Noun2" name="Noun2" type="text"><br><br>
       <label for="Clothing">A Article of Clothing</label>
       <input id="Clothing" name="Clothing" type="text"><br><br>
