updates HomeController with proper endpoint and call to update Albert Einstein madlib
Co-authored-by: Ian Gregg <iangregg188@gmail.com>

--- a/Madlibs/Views/Home/Form3.cshtml
+++ b/Madlibs/Views/Home/Form3.cshtml
@@ -2,12 +2,12 @@
 <html>
   <head>
     <meta charset='utf-8'>
-    <title>Madlib about Albert Einstein</title>
+    <title>Famous Invention</title>
     <link rel='stylesheet' href='https://maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css'>
   </head>
   <body>
-    <h1>Fill in the form to create a Madlib about Albert Einstein!</h1>
-    <form action="/MadlibAlbert" method="post">
+    <h1>Famous Invention</h1>
+    <form action="/" method="post">
       <label for="FemaleCelebrity">Female Celebrity</label>
       <input id="FemaleCelebrity" name="FemaleCelebrity" type="text"><br><br>
       <label for="MaleCelebrity">Male Celebrity</label>
