updates project with home page with buttons that link to each several forms for different madlibs
Co-authored-by: Ian Gregg <iangregg188@gmail.com>

--- a/Madlibs/Views/Home/ChooseAMadlib.cshtml
+++ b/Madlibs/Views/Home/ChooseAMadlib.cshtml
@@ -7,12 +7,12 @@
   </head>
   <body>
     <h1>Choose a Madlib story</h1>
-    <form class="container">
-      <option action="/Form">A day in the park</option>
-      <option action="/Form2">Albert Einstein</option>
-      <option action="/"></option>
-      <option action="/"></option>
-      <button type="submit">Submit</button>
-    </form>
+
+    <h3>Park Story</h3>
+    <a href = "/Form"><button type="btn btn-info" href="/form">Park Story</button></a><br>
+    <h3>Albert Einstein Story</h3>
+    <a href = "/Form2"><button type="btn btn-info" href="/form2">Albert Einstein</button></a><br>
+    <h3>Famous Invention</h3>
+    <a href = "/Form3"><button type="btn btn-info" href="/form3">Famous Invention</button></a><br>
   </body>
 </html>
