--- a/Madlibs/Views/Home/Form3.cshtml
+++ b/Madlibs/Views/Home/Form3.cshtml
@@ -7,8 +7,8 @@
   </head>
   <body>
     <h1>Famous Invention</h1>
-    <form action="/" method="post">
-      <label for="FemaleCelebrity">Female Celebrity</label>
+    <form action="/MadlibInvention" method="post">
+      <label for="">Female Celebrity</label>
       <input id="FemaleCelebrity" name="FemaleCelebrity" type="text"><br><br>
       <label for="MaleCelebrity">Male Celebrity</label>
       <input id="MaleCelebrity" name="MaleCelebrity" type="text"><br><br>
