--- a/Madlibs/Views/Home/MadlibAlbert.cshtml
+++ b/Madlibs/Views/Home/MadlibAlbert.cshtml
@@ -1,6 +1,6 @@
 
 <h1>Albert Einstein</h1>
-<p>Albert Einstein, the son of @Model.FemaleCelebrity and @ModelMaleCelebrity,</p>
+<p>Albert Einstein, the son of @Model.FemaleCelebrity and @Model.MaleCelebrity,</p>
 <p>was born in Ulm, Germany, in 1879. In 1902, he had a job</p>
 <p>as assistant @Model.Noun1 in the Swiss patent office and attended</p>
 <p>the University of Zurich. There he began studying atoms, molecules,</p>
