adds Home controller to update invention story madlib class with appropriate data, adds form for same madlib
Co-authored-by: Ian Gregg <iangregg188@gmail.com>

--- a/Madlibs/Views/Home/Form3.cshtml
+++ b/Madlibs/Views/Home/Form3.cshtml
@@ -8,32 +8,40 @@
   <body>
     <h1>Famous Invention</h1>
     <form action="/MadlibInvention" method="post">
-      <label for="">Female Celebrity</label>
-      <input id="FemaleCelebrity" name="FemaleCelebrity" type="text"><br><br>
-      <label for="MaleCelebrity">Male Celebrity</label>
-      <input id="MaleCelebrity" name="MaleCelebrity" type="text"><br><br>
       <label for="Noun1">Noun</label>
       <input id="Noun1" name="Noun1" type="text"><br><br>
-      <label for="PluralNoun1">Plural Noun</label>
-      <input id="PluralNoun1" name="PluralNoun1" type="text"><br><br>
       <label for="Adjective1">Adjective</label>
       <input id="Adjective1" name="Adjective1" type="text"><br><br>
-      <label for="PluralNoun2">Plural Noun</label>
-      <input id="PluralNoun2" name="PluralNoun2" type="text"><br><br>
-      <label for="Adjective2">Adjective</label>
-      <input id="Adjective2" name="Adjective2" type="text"><br><br>
-      <label for="PluralNoun3">Plural Noun</label>
-      <input id="PluralNoun3" name="PluralNoun3" type="text"><br><br>
+      <label for="FamousPerson1">Famous Person</label>
+      <input id="FamousPerson1" name="FamousPerson1" type="text"><br><br>
+      <label for="FamousPerson2">2nd Famous Person</label>
+      <input id="FamousPerson2" name="FamousPerson2" type="text"><br><br>
       <label for="Noun2">Noun</label>
       <input id="Noun2" name="Noun2" type="text"><br><br>
-      <label for="Place">Place</label>
-      <input id="Place" name="Place" type="text"><br><br>
-      <label for="PluralNoun4">Plural Noun</label>
-      <input id="PluralNoun4" name="PluralNoun4" type="text"><br><br>
+      <label for="PluralNoun1">Plural Noun</label>
+      <input id="PluralNoun1" name="PluralNoun1" type="text"><br><br>
+      <label for="Exlimation">Exlimation</label>
+      <input id="Exlimation" name="Exlimation" type="text"><br><br>
       <label for="Noun3">Noun</label>
       <input id="Noun3" name="Noun3" type="text"><br><br>
-      <label for="PluralProfession">Plural Profession</label>
-      <input id="PluralProfession" name="PluralProfession" type="text"><br><br>
+      <label for="Adjective2">Adjective</label>
+      <input id="Adjective2" name="Adjective2" type="text"><br><br>
+      <label for="PluralNoun2">Plural Noun</label>
+      <input id="PluralNoun2" name="PluralNoun2" type="text"><br><br>
+      <label for="Noun4">Noun</label>
+      <input id="Noun4" name="Noun4" type="text"><br><br>
+      <label for="PluralTypeOfFood">Plural Type Of Food</label>
+      <input id="PluralTypeOfFood" name="PluralTypeOfFood" type="text"><br><br>
+      <label for="TypeOfLiquid">Type Of Liquid</label>
+      <input id="TypeOfLiquid" name="TypeOfLiquid" type="text"><br><br>
+      <label for="Noun5">Noun</label>
+      <input id="Noun5" name="Noun5" type="text"><br><br>
+      <label for="Adjective3">Adjective3</label>
+      <input id="Adjective3" name="Adjective3" type="text"><br><br>
+      <label for="Number">Number</label>
+      <input id="Number" name="Number" type="text"><br><br>
+      <label for="Adverb">Adverb</label>
+      <input id="Adverb" name="Adverb" type="text"><br><br>
       <button type="submit">Submit</button>
     </form>
   </body>
